--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,11 +3,7 @@
 
 name: Python application
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [ push ]
 
 jobs:
   build:
@@ -15,6 +11,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Notify slack success
+      if: success()
+      env:
+        SLACK_BOT_TOKEN: xapp-1-A02BLMW9R7T-2388324018532-87e53aba8efa6504f8fca98cd399a2cd119652c48c2cafba87c59eb3921ce006
+      uses: voxmedia/github-action-slack-notify-build@v1
+      with:
+        channel: app-alerts
+        status: STARTING
+        color: warning
+        
     - uses: actions/checkout@v2
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
@@ -34,3 +40,22 @@ jobs:
     - name: Test with pytest
       run: |
         pytest *.py
+    - name: Notify slack success
+      if: success()
+      env:
+        SLACK_BOT_TOKEN: xapp-1-A02BLMW9R7T-2388324018532-87e53aba8efa6504f8fca98cd399a2cd119652c48c2cafba87c59eb3921ce006
+      uses: voxmedia/github-action-slack-notify-build@v1
+      with:
+        channel: app-alerts
+        status: SUCCESS
+        color: good
+
+    - name: Notify slack fail
+      if: failure()
+      env:
+        SLACK_BOT_TOKEN: xapp-1-A02BLMW9R7T-2388324018532-87e53aba8efa6504f8fca98cd399a2cd119652c48c2cafba87c59eb3921ce006
+      uses: voxmedia/github-action-slack-notify-build@v1
+      with:
+        channel: app-alerts
+        status: FAILED
+        color: danger
