--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,7 +17,7 @@ jobs:
         SLACK_BOT_TOKEN: xapp-1-A02BLMW9R7T-2388324018532-87e53aba8efa6504f8fca98cd399a2cd119652c48c2cafba87c59eb3921ce006
       uses: voxmedia/github-action-slack-notify-build@v1
       with:
-        channel: app-alerts
+        channel: build_status
         status: STARTING
         color: warning
         
