--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,10 +33,10 @@ jobs:
     - name: Slack Notification
       uses: rtCamp/action-slack-notify@v2
       env:
-        SLACK_CHANNEL: general
+        SLACK_CHANNEL: build_status
         SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#ff00ff'
         SLACK_ICON: https://github.com/rtCamp.png?size=48
-        SLACK_MESSAGE: 'Post Content :rocket:'
-        SLACK_TITLE: Post Title
-        SLACK_USERNAME: rtCamp
+        SLACK_MESSAGE: 'Build done :rocket:'
+        SLACK_TITLE: Github action update
+        SLACK_USERNAME: github
         SLACK_WEBHOOK: https://hooks.slack.com/services/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
